hashcash-0.15 - 14-Mar-2002 - Adam Back <adam@cypherspace.org>

	* deal with unix, DOS, and mac lf endings (rather than just unix)
	* fix bug reported by Doc.Cypher <doc_cypher@redneck.gacracker.org>
	* modifications to compile under VC++ 6.0 on win32
	* add -i feature

hashcash-0.14 - 13-Mar-2002 - Adam Back <adam@cypherspace.org>

	* revamped flags and arguments
	* lots of new options and features
	* more safe error reporting (avoid risk of false positives)
	* fix all warnings
	* make compile on machines with 64 bit longs
	* make compile on IRIX
	* make Makefile more portable
	* more reliable timing strategy
	* remove separate endian.c -- put endian stuff in libsha1.c
	* create man page
	* update documentation
	* re-implement SDB simple database to have a more standard
	  interface to facilitate plugging in gdb etc
	* import random number interface to /dev/urandom

hashcash-0.13 - 03-Mar-2002 - Adam Back <adam@cypherspace.org>

 	* fix bug introduced in 0.12
	* update documentation

hashcash-0.12 - 03-Mar-2002 - Adam Back <adam@cypherspace.org>

	* add option to verify resource name given on command line
          matches resource name in collision
	* also more compatible with 0.10 command line as a result
     	* add option to print resource name parsed from collision

hashcash-0.11 - 02-Mar-2002 - Adam Back <adam@cypherspace.org>

  	* fix buffer overflow reported by Max Greenius
	* add -v mode suggested by Michael Shinn
	* add interactive mode instead of usage as default, another
	  suggestion from Michael Shinn
	* add explicit -h for usage
	* add -q mode for even quieter output (batch like mode)
	* add -x option to take collision to verify from stdin
	* update the documentation in readme.txt to reflect
	  new format and options
	* add install target to makefile to install binaries
	  for hashcash and sha1 in /usr/local/bin, another
	  suggestion from Michael Shinn

hashcash-0.10 - 20-Feb-2002 - Michael Shinn <mike@shinn.net>
